   :depth: 1

bzr 2.2b3
#########

:2.2b3: NOT RELEASED YET

Compatibility Breaks
********************

* An API break has been made to the lock_write method of ``Branch`` and
  ``Repository`` objects; they now return ``branch.BranchWriteLockResult``
  and ``repository.RepositoryWriteLockResult`` objects. This makes
  changing the API in future easier and permits some cleaner calling code.
  (Robert Collins)

New Features
************

* ``bzr commit`` accepts ``-p`` (for "patch") as a shorter name for
  ``--show-diff``.
  (Parth Malwankar, #571467)
  
* ``bzr ignore`` now supports a ``--default-rules`` option that displays
  the default ignore rules used by bzr. The flag ``--old-default-rules``
  is no longer supported by ``ignore``.
  (Parth Malwankar, #538703)

* ``bzr pack`` now supports a ``--clean-obsolete-packs`` option that
  can save disk space by deleting obsolete pack files created during the
  pack operation.
  (Parth Malwankar, #304320)

Bug Fixes
*********

* ``.bazaar``, ``.bazaar/bazaar.conf`` and ``.bzr.log`` inherit user and
  group ownership from the containing directory. This allow bzr to work
  better with sudo.
  (Martin <gzlist@googlemail.com>, Parth Malwankar, #376388)

* ``bzr log --exclude-common-ancestry -r X..Y`` displays the revisions that
  are part of Y ancestry but not part of X ancestry (aka the graph
  difference).
  (Vincent Ladeuil, #320119)

* ``bzr selftest --parallel=fork`` wait for its children avoiding zombies.
  (Vincent Ladeuil, #566670)

* ``bzr selftest`` should not use ui.note() since it's not unicode safe.
  (Vincent Ladeuil, #563997)

* Don't mention --no-strict when we just issue the warning about unclean trees.
  (Vincent Ladeuil, #401599)

* Fixed ``AssertionError`` when accessing smart servers running Bazaar
  versions before 1.6.
  (Andrew Bennetts, #528041)

* Reduce peak memory by one copy of compressed text.
  (John Arbash Meinel, #566940)
