@@ -49,7 +49,7 @@ from bzrlib.tag import (
 from bzrlib.decorators import needs_read_lock, needs_write_lock, only_raises
 from bzrlib.hooks import HookPoint, Hooks
 from bzrlib.inter import InterObject
-from bzrlib.lock import _RelockDebugMixin
+from bzrlib.lock import _RelockDebugMixin, LogicalLockResult
 from bzrlib import registry
 from bzrlib.symbol_versioning import (
     deprecated_in,
@@ -295,8 +295,7 @@ class Branch(bzrdir.ControlComponent):
     def lock_read(self):
         """Lock the branch for read operations.
 
-        :return: An object with an unlock method which will release the lock
-            obtained.
+        :return: A bzrlib.lock.LogicalLockResult.
         """
         raise NotImplementedError(self.lock_read)
 
@@ -2276,7 +2275,7 @@ network_format_registry.register(
     _legacy_formats[0].network_name(), _legacy_formats[0].__class__)
 
 
-class BranchWriteLockResult(object):
+class BranchWriteLockResult(LogicalLockResult):
     """The result of write locking a branch.
 
     :ivar branch_token: The token obtained from the underlying branch lock, or
@@ -2285,10 +2284,10 @@ class BranchWriteLockResult(object):
     """
 
     def __init__(self, unlock, branch_token):
+        LogicalLockResult.__init__(self, unlock)
         self.branch_token = branch_token
-        self.unlock = unlock
 
-    def __str__(self):
+    def __repr__(self):
         return "BranchWriteLockResult(%s, %s)" % (self.branch_token,
             self.unlock)
 
@@ -2379,8 +2378,7 @@ class BzrBranch(Branch, _RelockDebugMixin):
     def lock_read(self):
         """Lock the branch for read operations.
 
-        :return: An object with an unlock method which will release the lock
-            obtained.
+        :return: A bzrlib.lock.LogicalLockResult.
         """
         if not self.is_locked():
             self._note_lock('r')
@@ -2394,7 +2392,7 @@ class BzrBranch(Branch, _RelockDebugMixin):
             took_lock = False
         try:
             self.control_files.lock_read()
-            return self
+            return LogicalLockResult(self.unlock)
         except:
             if took_lock:
                 self.repository.unlock()
